@@ -1,4 +1,8 @@
 2009-04-17 Alexander Malysh <amalysh at kannel.org>
+    * aclocal.m4, configure, configure.in: fixed FeeBSD compilation options.
+      Use -lpthread instead of -lkse. See http://www.FreeBSD.org/kse/.
+
+2009-04-17 Alexander Malysh <amalysh at kannel.org>
     * gwlib/charset.c, gwlib/date.c: fixed compiler warnings.
       Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for pointing
       to it and partially fix.
